--- a/Lab4Demo/contact.html
+++ b/Lab4Demo/contact.html
@@ -25,7 +25,7 @@
         <h3>Contact Information</h3>
         <p>Billy Joe Sleepy</p>
         <p>423-123-4567</p>
-        <p> <a href="mailto:billyjoe@thegreatoutdoors.com"></a> billyjoe@thegreatoutdoors.com></p>
+        <p> <a href="mailto:billyjoe@thegreatoutdoors.com"></a> billyjoe@thegreatoutdoors.com</p>
     </main>
 
     <footer>&copy; 2021 Lab 4 Demo - The Great Outdoors</footer>
