--- a/Lab6/index.html
+++ b/Lab6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 5 - Fitness</title>
+    <title>Lab 6 - Fitness</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -15,7 +15,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -28,8 +28,10 @@
 
             <p>One excellent way to remain consistent in your exercise and diet is to keep a log. Logging your workouts and what weights you are using is a necessity for consistency. The same can be said for your diet. Your log should include your workouts with weigths and what you are eating and when. Your log also serves as a reminder of the progress you've made and where you are progressing to, which can serve as a much needed mental boost.</p>
 
-            <img src="images/calisthenics.jpg" alt="calisthenics" class="center">
+            <img src="images/calisthenics.jpg" alt="calisthenics" class="center tab_mobile">
+            <img class="desktop center" src="images/calisthenics2.jpg" alt="Calisthenics 2">
         </section>
+
         <aside>
             <h3>Fitness Activities</h3>
             <ul>
