Fixed a Few Errors

--- a/Lab8/gallery.html
+++ b/Lab8/gallery.html
@@ -40,6 +40,7 @@
               <h2>Welcome to The Elder Scrolls Gallery</h2>
           </header>
           <section>
+            <h2>Gallery of Creatures</h2>           
               <p>There are a wide variety of entities and creatures in the Elder Scrolls universe. Below is a slideshow gallery of some of the various beings and creatures of Tamriel.</p>
             <div class="slider">
                 <div><img src="images/dwemermadecenturion.jpg" alt="Dwemer Centurion"></div>
