--- a/Lab8/index.html
+++ b/Lab8/index.html
@@ -42,12 +42,14 @@
         </nav>
         <main>
             <section>
+                <h2>Elder Scrolls Lore</h2>
                 <p>The Elder Scrolls universe is a complex and beautiful one, with deep lore and a highly detailed in universe history. There are very many various factions, races and creatures that inhabit the world of Nirn. The games mostly focus on events and stories occurring on the main and largest continent of the planet Nirn, Tamriel. Below is an image that shows the main sentient and playable races in Tamriel.</p>
                 <img src="images/esraces.jpg" alt="The races of The Elder Scrolls">
                 <p>Each race of Tamriel has its own advantages and disadvantages compared to each other. For example, Altmer (AKA "High Elves") have a distinct advantage in their magical ability compared to the other races, although destruction is not their forte. Bretons, who are ancestrally half human and half altmer, also have an advantage in certain schools of magic over other races. However, each advantage comes with a disadvantage; Bretons and Altmer are physically weaker on average compare to Nords or Orcs.</p>
 
             </section>
             <section>
+                <h2>More Elder Scrolls Lore</h2>
                 <p>Tamriel is a large and varying continent which is home not only to the diverse spread of sentient races, but also to an even more diverse selection of non sentient, undead and daedric creatures. There are nine regions in Tamriel. In no particular order, these are: High Rock, Hammerfell, Skyrim, Cyrodiil, Morrowind, The Summerset Isles, Valenwood, Elsweyr, and Black Marsh. The map of these regions is posted below. Each of these regions is home to one of the races shown above. Skyrim is home to the Nords, High Rock is home to the Bretons, Elsweyr home to the Khajiit and so on.</p>
                 <img src="images/tamrielmap.png" alt="Map of Tamriel">
             </section>
