--- a/Lab8/index.html
+++ b/Lab8/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/zenscroll-min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <script>
         $(function(){
             $('#menu').slicknav();
