Made various tweaks to fix errors

--- a/FinalProject/timeline.html
+++ b/FinalProject/timeline.html
@@ -15,8 +15,6 @@
     <script src="css/jquery.slicknav.min.js"></script>
     <link rel="stylesheet" href="SlickNav/dist/slicknav.min.css" />
     <script src="SlickNav/dist/jquery.slicknav.min.js"></script>
-    <link rel="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/slicknav.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/jquery.slicknav.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
@@ -55,6 +53,7 @@
             <li><a href="daedra.html">Daedra</a></li>
             <li><a href="aedra.html">Aedra</a></li>
         </ul>
+    </nav>
         <main>
         <h2>Welcome to The Elder Scrolls Timeline Page</h2>
         <p>
@@ -62,11 +61,11 @@
         </p>
         <img src="images/testimelinebyera.png" alt="Timeline">
         <p> I have also included below a helpful lore explanation deep dive video about the Merethic era. It is quite informative. I've also included some Elven music to relax to as you peruse the site.</p>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FS_eI7G-EmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FS_eI7G-EmQ" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <audio controls> <source src="audio/2019-07-29_-_Elven_Forest_-_FesliyanStudios.com_-_David_Renda.mp3" type="audio/mp3"></audio>
         </main>
         <footer>&copy; 2021 Final Project - Elder Scrolls Expanded</footer>
-    </nav>
+    
     
 </body>
 </html>
