Fixed Malacath images
Replaced misplaced Hircine image with Malacath

--- a/FinalProject/daedra.html
+++ b/FinalProject/daedra.html
@@ -123,7 +123,7 @@
                 <p>
                     Malacath is the patron daedric prince of the orsimer or orcs. He is also the prince of the spurned and ostracized. He is the keeper of the sworn oath and the bloody curse that created the orcs. He is a member of the house of troubles in Dunmeri ideology. Malacath is also known as Malak, Orkey, the blue god and maouloch. The ashpit is Malacath's plane of oblivion, it is a desolate and unwelcoming place. Below is a statue of Hircine in Cyrodiil.
                 </p>
-                <img src="images/hircine_shrine.png" alt="Hircine">
+                <img src="images/malacath.jpg" alt="Malacath">
             </div>
             <div id="tabs-8">
                 <p>
